--- a/Constants/Constants.csproj
+++ b/Constants/Constants.csproj
@@ -1,41 +1,35 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <AssemblyName>SharperHacks.CoreLibs.$(MSBuildProjectName)</AssemblyName>
-    <RootNamespace>SharperHacks.CoreLinbs$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
-  </PropertyGroup>
-
-  <PropertyGroup>
     <Authors>Joseph W Donahue</Authors>
     <Copyright>Joseph W Donahue &amp; Sharper Hacks LLC (WA)</Copyright>
     <Company>Sharper Hacks LLC (US-WA)</Company>
   </PropertyGroup>
 
   <PropertyGroup>
-    <Description>Defines commonly used constants.</Description>
+    <Description>Defines classes and methods to verify runtime contraints are met.</Description>
     <AssemblyName>SharperHacks.CoreLibs.$(MSBuildProjectName)</AssemblyName>
     <RootNamespace>SharperHacks.CoreLibs.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
     <NeutralLanguage>en-US</NeutralLanguage>
     <AssemblyVersion>0.0.0.0</AssemblyVersion>
     <FileVersion>0.0.0.0</FileVersion>
-    <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
-    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
-    <PackageReadMeFile>README.md</PackageReadMeFile>
-    <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
     <Title>$(AssemblyName)</Title>
   </PropertyGroup>
 
   <PropertyGroup>
     <EnforceCodeStyleInBuild>False</EnforceCodeStyleInBuild>
     <EnableNETAnalyzers>True</EnableNETAnalyzers>
-    <ImplicitUsings>enable</ImplicitUsings>
+    <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
     <IncludeSymbols>True</IncludeSymbols>
     <PackageIcon>SHLLC-Logo.128.100.jpg</PackageIcon>
-    <PackageProjectUrl>https://github.com/SharperHacks-org/IO</PackageProjectUrl>
-    <PackageTags>IO</PackageTags>
+    <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/SharperHacks-org/$(MSBuildProjectName)</PackageProjectUrl>
+    <PackageReadMeFile>README.md</PackageReadMeFile>
+    <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
+    <PackageTags>Constraints</PackageTags>
     <RepositoryType>git</RepositoryType>
-    <RepositoryUrl>https://ghihub.com/SharperHacks-org/IO</RepositoryUrl>
+    <RepositoryUrl>https://ghihub.com/SharperHacks-org/$(MSBuildProjectName)</RepositoryUrl>
     <SuppressNETCoreSdkPreviewMessage>true</SuppressNETCoreSdkPreviewMessage>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <TargetFrameworks>net6.0;net7.0;net8.0</TargetFrameworks>
@@ -44,8 +38,9 @@
   <PropertyGroup>
     <AnalysisLevel>latest-recommended</AnalysisLevel>
     <Deterministic>true</Deterministic>
+    <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <PathMap>$(MSBuildThisFileDirectory)={SHLLC/CoreLibs/IO}/</PathMap>
+    <PathMap>$(MSBuildThisFileDirectory)={SHLLC/CoreLibs/Constraints}/</PathMap>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net8.0|AnyCPU'">
