Fix: Corrected description.

--- a/Constants/Constants.csproj
+++ b/Constants/Constants.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <Description>Defines classes and methods to verify runtime contraints are met.</Description>
+    <Description>Defines useful constants grouped by class..</Description>
     <AssemblyName>SharperHacks.CoreLibs.$(MSBuildProjectName)</AssemblyName>
     <RootNamespace>SharperHacks.CoreLibs.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
