--- a/Constants/Constants.csproj
+++ b/Constants/Constants.csproj
@@ -1,12 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <Authors>Joseph W Donahue</Authors>
-    <Copyright>Joseph W Donahue &amp; Sharper Hacks LLC (WA)</Copyright>
-    <Company>Sharper Hacks LLC (US-WA)</Company>
-  </PropertyGroup>
-
-  <PropertyGroup>
     <Description>Defines useful constants grouped by class..</Description>
     <AssemblyName>SharperHacks.CoreLibs.$(MSBuildProjectName)</AssemblyName>
     <RootNamespace>SharperHacks.CoreLibs.$(MSBuildProjectName.Replace(" ", "_"))</RootNamespace>
@@ -15,6 +9,7 @@
     <AssemblyVersion>0.0.0.0</AssemblyVersion>
     <FileVersion>0.0.0.0</FileVersion>
     <Title>$(AssemblyName)</Title>
+    <PathMap>$(SolutionDir)={$(PathMapRoot)/$(SolutionName)}/</PathMap>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -25,7 +20,7 @@
     <PackageIcon>SHLLC-Logo.jpg</PackageIcon>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/SharperHacks-org/$(MSBuildProjectName)</PackageProjectUrl>
-    <PackageReadMeFile>Package-ReadMe.md</PackageReadMeFile>
+    <PackageReadMeFile>ReadMe.md</PackageReadMeFile>
     <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
     <PackageTags>Constants</PackageTags>
     <RepositoryType>git</RepositoryType>
@@ -39,7 +34,6 @@
     <Deterministic>true</Deterministic>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <PathMap>$(MSBuildThisFileDirectory)={SHLLC/CoreLibs/$(MSBuildProjectName)}/</PathMap>
     <NuGetAuditMode>all</NuGetAuditMode>
   </PropertyGroup>
 
@@ -68,18 +62,23 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="$(SolutionDir)LICENSE" Pack="true" PackagePath="" />
-    <None Include="$(SolutionDir)Package-ReadMe.md" Pack="true" PackagePath="" />
-    <None Update="Package-ReadMe.md">
-      <Pack>True</Pack>
-      <PackagePath>\</PackagePath>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-    <None Include="$(SolutionDir)*.jpg" Pack="true" PackagePath="\" />
-    <None Update="$(SolutionDir)*.jpg">
-      <Pack>True</Pack>
-      <PackagePath>\</PackagePath>
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
+      <None Include="$(SolutionDir)LICENSE" Pack="true" PackagePath="" />
+      <None Update="LICENSE">
+          <Pack>True</Pack>
+          <PackagePath>\</PackagePath>
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Include="$(SolutionDir)README.md" Pack="true" PackagePath="" />
+      <None Update="README.md">
+          <Pack>True</Pack>
+          <PackagePath>\</PackagePath>
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Include="$(SolutionDir)*.jpg" Pack="true" PackagePath="\" />
+      <None Update="$(SolutionDir)*.jpg">
+          <Pack>True</Pack>
+          <PackagePath>\</PackagePath>
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
   </ItemGroup>
 </Project>
