--- a/Constants/Constants.csproj
+++ b/Constants/Constants.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <Description>Defines useful constants grouped by class..</Description>
